# SWECW2-AudioLibrary

./: .gitignore  CMakeLists.txt  GUI_README.md  Makefile  PORTFOLIO.md  README.md  TECHNICAL_DEEP_DIVE.md  USAGE.md  audio_library_tests  demo.bat  demo.sh  music_manager
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: sample_tracks.csv
docs/: app.js  index.html  styles.css
examples/: CMakeLists.txt  basic_usage.cpp
gui/: CMakeLists.txt  build_gui.sh  main_gui.cpp  mainwindow.cpp  mainwindow.h  searchdialog.cpp  searchdialog.h  trackdialog.cpp  trackdialog.h
include/audio_library/: file_io.h  music_library.h  search_engine.h  track.h
legacy/: file_loader.cpp  hash_table.cpp  track.h
src/: Makefile  file_loader.cpp  file_loader.h  hash_table.cpp  hash_table.h  main.cpp  music_library.exe.stackdump  numa.txt  tests.cpp  track.cpp  track.h
src/audio_library/: file_io.cpp  music_library.cpp  search_engine.cpp  track.cpp
tests/: CMakeLists.txt  test_file_io.cpp  test_music_library.cpp  test_search_engine.cpp  test_track.cpp
